--- a/graphics.html
+++ b/graphics.html
@@ -14,6 +14,10 @@
         ctx.arc(95, 50, 40, 0, 2 * Math.PI);
         ctx.stroke();
     </script>
+    <svg width = "100" height = "100" >
+        <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
+
+    </svg>
     
     
 </body>
